why not bump to 0.4

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,12 +9,12 @@
     "import darkwing as dw\n",
     "\n",
     "def foo(rel, res=6):\n",
-    "    return (rel\n",
-    "    | 'select pickup_latitude as lat, pickup_longitude as lng, tip_amount'       \n",
-    "    | f'select h3_latlng_to_cell(lat, lng, {res}) as hexid, tip_amount as tip'\n",
-    "    | 'select hexid, avg(tip) as tip group by 1'\n",
-    "    | 'select h3_h3_to_string(hexid) as hexid, tip'\n",
-    "    | 'where tip > 0'\n",
+    "    return rel.do(\n",
+    "        'select pickup_latitude as lat, pickup_longitude as lng, tip_amount',\n",
+    "        f'select h3_latlng_to_cell(lat, lng, {res}) as hexid, tip_amount as tip',\n",
+    "        'select hexid, avg(tip) as tip group by 1',\n",
+    "        'select h3_h3_to_string(hexid) as hexid, tip',\n",
+    "        'where tip > 0',\n",
     "    )"
    ]
   },
@@ -70,15 +70,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# out = dw.query('select * from \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -124,13 +115,13 @@
    ],
    "source": [
     "# (dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
-    "(dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
-    "| 'select *, pickup_latitude as lat, pickup_longitude as lng'       \n",
-    "| 'select *, h3_latlng_to_cell(lat, lng, 8) as hexid'\n",
-    "| 'select hexid, avg(tip_amount) as tip  group by 1'\n",
-    "| 'select h3_h3_to_string(hexid) as hexid, tip'\n",
-    "| 'where tip between 10 and 20'\n",
-    "| 'order by hexid'\n",
+    "dw.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
+    "    'select *, pickup_latitude as lat, pickup_longitude as lng',\n",
+    "    'select *, h3_latlng_to_cell(lat, lng, 8) as hexid',\n",
+    "    'select hexid, avg(tip_amount) as tip  group by 1',\n",
+    "    'select h3_h3_to_string(hexid) as hexid, tip',\n",
+    "    'where tip between 10 and 20',\n",
+    "    'order by hexid',\n",
     ")"
    ]
   },
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,30 +303,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'vendor_id': 'VTS',\n",
-       " 'pickup_datetime': '2010-01-21 23:29:00',\n",
-       " 'dropoff_datetime': '2010-01-21 23:34:00',\n",
+       " 'pickup_datetime': '2010-01-26 07:41:00',\n",
+       " 'dropoff_datetime': '2010-01-26 07:45:00',\n",
        " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(0.92),\n",
-       " 'pickup_longitude': np.float64(-73.98491799999998),\n",
-       " 'pickup_latitude': np.float64(40.73967),\n",
+       " 'trip_distance': np.float64(0.75),\n",
+       " 'pickup_longitude': np.float64(-73.956778),\n",
+       " 'pickup_latitude': np.float64(40.76775),\n",
        " 'rate_code': '1',\n",
        " 'store_and_fwd_flag': None,\n",
-       " 'dropoff_longitude': np.float64(-73.97325999999998),\n",
-       " 'dropoff_latitude': np.float64(40.738535),\n",
+       " 'dropoff_longitude': np.float64(-73.965957),\n",
+       " 'dropoff_latitude': np.float64(40.765232),\n",
        " 'payment_type': 'CAS',\n",
-       " 'fare_amount': np.float64(4.9),\n",
-       " 'surcharge': np.float64(0.5),\n",
+       " 'fare_amount': np.float64(4.5),\n",
+       " 'surcharge': np.float64(0.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
        " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(5.9)}"
+       " 'total_amount': np.float64(5.0)}"
       ]
      },
      "execution_count": null,
@@ -344,12 +335,15 @@
     }
    ],
    "source": [
-    "rel1 >> 'select arbitrary(columns(*))' >> dict"
+    "rel1.do(\n",
+    "    'select arbitrary(columns(*))',\n",
+    "    dict,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,12 +358,12 @@
     }
    ],
    "source": [
-    "rel1 >> 'select count()' >> int"
+    "rel1.do('select count()').do(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,13 +440,13 @@
     }
    ],
    "source": [
-    "rel4 = 'data/yellow_tripdata_2010-01.parquet' >> dw.Table\n",
+    "rel4 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
     "rel4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -462,29 +456,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1005fffffff │ 1.1295640074211502 │\n",
-       "│ 862a10747ffffff │  0.675799283154122 │\n",
-       "│ 862a1009fffffff │  1.140124796527401 │\n",
-       "│ 862a1045fffffff │ 1.4863380281690142 │\n",
-       "│ 862a10197ffffff │ 1.6855555555555555 │\n",
-       "│ 862a10757ffffff │ 0.7489915492957745 │\n",
-       "│ 862a103afffffff │  1.231140350877193 │\n",
-       "│ 862a10447ffffff │  2.945642458100559 │\n",
-       "│ 862a10037ffffff │ 3.0918773946360147 │\n",
-       "│ 862a10cefffffff │ 1.1579166666666667 │\n",
-       "│        ·        │                 ·  │\n",
-       "│        ·        │                 ·  │\n",
-       "│        ·        │                 ·  │\n",
-       "│ 862b8b057ffffff │               6.07 │\n",
-       "│ 862aa956fffffff │                1.0 │\n",
-       "│ 862ac6347ffffff │               0.76 │\n",
-       "│ 86397281fffffff │                2.0 │\n",
-       "│ 862a5421fffffff │               3.08 │\n",
-       "│ 862b1c667ffffff │               1.96 │\n",
-       "│ 862b8db6fffffff │                1.4 │\n",
-       "│ 862a84c1fffffff │                4.0 │\n",
-       "│ 862a13c67ffffff │                0.5 │\n",
-       "│ 86016538fffffff │                3.0 │\n",
+       "│ 862a1071fffffff │   6.42137912952281 │\n",
+       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
+       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
+       "│ 862a106c7ffffff │ 0.9598425196850394 │\n",
+       "│ 862a10cc7ffffff │              0.426 │\n",
+       "│ 862a1006fffffff │ 3.1196226415094337 │\n",
+       "│ 862a10707ffffff │ 1.4344105263157898 │\n",
+       "│ 86754a937ffffff │ 0.5765625000000001 │\n",
+       "│ 862b20637ffffff │ 0.1788888888888889 │\n",
+       "│ 862a1050fffffff │  0.527027027027027 │\n",
+       "│        ·        │                ·   │\n",
+       "│        ·        │                ·   │\n",
+       "│        ·        │                ·   │\n",
+       "│ 862a35397ffffff │              11.05 │\n",
+       "│ 862aa5c8fffffff │ 0.3333333333333333 │\n",
+       "│ 862aab48fffffff │                2.0 │\n",
+       "│ 863935577ffffff │                2.0 │\n",
+       "│ 862a1212fffffff │               7.98 │\n",
+       "│ 862aadcc7ffffff │               3.24 │\n",
+       "│ 862a16a07ffffff │                2.0 │\n",
+       "│ 862aa556fffffff │                1.0 │\n",
+       "│ 862a022b7ffffff │                3.0 │\n",
+       "│ 862aac60fffffff │                2.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -496,12 +490,61 @@
     }
    ],
    "source": [
-    "rel1 | foo"
+    "rel1.do(foo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌─────────────────┬────────────────────┐\n",
+       "│      hexid      │        tip         │\n",
+       "│     varchar     │       double       │\n",
+       "├─────────────────┼────────────────────┤\n",
+       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
+       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
+       "│ 862a1018fffffff │ 1.6588950276243093 │\n",
+       "│ 862a1088fffffff │  9.787446808510639 │\n",
+       "│ 862a10667ffffff │ 0.6512962962962964 │\n",
+       "│ 862a10707ffffff │ 1.4344105263157896 │\n",
+       "│ 862a1071fffffff │   6.42137912952281 │\n",
+       "│ 862a1000fffffff │ 1.2942699115044247 │\n",
+       "│ 862a15667ffffff │ 3.6666666666666665 │\n",
+       "│ 862a10187ffffff │  4.194242424242424 │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│ 862aa1d27ffffff │                3.3 │\n",
+       "│ 862aac917ffffff │                1.8 │\n",
+       "│ 862a13027ffffff │                2.0 │\n",
+       "│ 862aa0d6fffffff │                2.0 │\n",
+       "│ 862a366c7ffffff │               3.47 │\n",
+       "│ 862a33a07ffffff │                2.0 │\n",
+       "│ 862aad8afffffff │                1.6 │\n",
+       "│ 862a13537ffffff │                1.0 │\n",
+       "│ 862a12337ffffff │                0.8 │\n",
+       "│ 862a13337ffffff │                2.0 │\n",
+       "├─────────────────┴────────────────────┤\n",
+       "│ 850 rows (20 shown)        2 columns │\n",
+       "└──────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(rel1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -519,15 +562,15 @@
    ],
    "source": [
     "out = dw.Database(\n",
-    "    rel1 = rel1 >> foo,\n",
-    "    rel2 = rel2 >> foo,\n",
+    "    rel1 = foo(rel1),\n",
+    "    rel2 = rel2.do(foo),\n",
     ")\n",
     "out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -544,9 +587,9 @@
    ],
    "source": [
     "out = dw.Database(\n",
-    "    rel1 = rel1 >> foo,\n",
-    "    rel2 = rel2 >> foo,\n",
-    ") | \"\"\"\n",
+    "    rel1 = foo(rel1),\n",
+    "    rel2 = foo(rel2),\n",
+    ").do(\"\"\"\n",
     "select\n",
     "    hexid,\n",
     "    rel1.tip\n",
@@ -556,17 +599,18 @@
     "from rel1\n",
     "full outer join rel2\n",
     "using (hexid)\n",
-    "\"\"\"\n",
+    "\"\"\")\n",
     "\n",
-    "(out\n",
-    "| 'where tip1 is not null and tip2 is not null'\n",
-    "| 'select *, tip1-tip2 as diff order by diff'\n",
-    ") >> 'as bam' # precedence rules!"
+    "out.do(\n",
+    "    'where tip1 is not null and tip2 is not null',\n",
+    "    'select *, tip1-tip2 as diff order by diff',\n",
+    "    'as bam',\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -679,16 +723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out2 = out >> 'pandas'"
+    "out2 = out.do('pandas')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": []
