--- a/wizard.ipynb
+++ b/wizard.ipynb
@@ -84,7 +84,7 @@
    ],
    "source": [
     "s = 'select columns(*) + 1'\n",
-    "tbl >> s >> s >> s"
+    "tbl.do(s,s,s)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "def f(x):\n",
-    "    return x >> s >> s >> s"
+    "    return x.do(s,s,s)"
    ]
   },
   {
@@ -117,7 +117,7 @@
        "│   a   │\n",
        "│ int64 │\n",
        "├───────┤\n",
-       "│    11 │\n",
+       "│     3 │\n",
        "└───────┘"
       ]
      },
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "tbl >> [f, 'select columns(*) + 1', f, f, s]"
+    "tbl.do(f)"
    ]
   },
   {
@@ -156,10 +156,8 @@
     }
    ],
    "source": [
-    "def g(x):\n",
-    "    return x >> [f, 'select columns(*) + 1', f, f, s]\n",
-    "\n",
-    "tbl >> g"
+    "few = [f, 'select columns(*) + 1', f, f, s]\n",
+    "tbl.do(few)"
    ]
   },
   {
@@ -188,9 +186,10 @@
     }
    ],
    "source": [
-    "g = [f, 'select columns(*) + 1', f, f, s]\n",
+    "def g(x):\n",
+    "    return x.do(few)\n",
     "\n",
-    "tbl >> g"
+    "tbl.do(g)"
    ]
   },
   {
@@ -219,12 +218,64 @@
     }
    ],
    "source": [
+    "g = [f, 'select columns(*) + 1', f, f, s]\n",
+    "\n",
     "tbl.do(g)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    bam: 1 x ['a']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl.alias('bam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    bam: 1 x ['a']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl.do('as bam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "python"
