readme, but also probably breaks things

--- a/test.ipynb
+++ b/test.ipynb
@@ -310,23 +310,23 @@
      "data": {
       "text/plain": [
        "{'vendor_id': 'VTS',\n",
-       " 'pickup_datetime': '2010-01-26 07:41:00',\n",
-       " 'dropoff_datetime': '2010-01-26 07:45:00',\n",
-       " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(0.75),\n",
-       " 'pickup_longitude': np.float64(-73.956778),\n",
-       " 'pickup_latitude': np.float64(40.76775),\n",
+       " 'pickup_datetime': '2010-01-22 18:42:00',\n",
+       " 'dropoff_datetime': '2010-01-22 19:02:00',\n",
+       " 'passenger_count': np.int64(5),\n",
+       " 'trip_distance': np.float64(6.17),\n",
+       " 'pickup_longitude': np.float64(-73.950947),\n",
+       " 'pickup_latitude': np.float64(40.779223),\n",
        " 'rate_code': '1',\n",
        " 'store_and_fwd_flag': None,\n",
-       " 'dropoff_longitude': np.float64(-73.965957),\n",
-       " 'dropoff_latitude': np.float64(40.765232),\n",
+       " 'dropoff_longitude': np.float64(-73.987053),\n",
+       " 'dropoff_latitude': np.float64(40.72531),\n",
        " 'payment_type': 'CAS',\n",
-       " 'fare_amount': np.float64(4.5),\n",
-       " 'surcharge': np.float64(0.0),\n",
+       " 'fare_amount': np.float64(17.3),\n",
+       " 'surcharge': np.float64(1.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
        " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(5.0)}"
+       " 'total_amount': np.float64(18.8)}"
       ]
      },
      "execution_count": null,
@@ -452,36 +452,36 @@
     {
      "data": {
       "text/plain": [
-       "┌─────────────────┬────────────────────┐\n",
-       "│      hexid      │        tip         │\n",
-       "│     varchar     │       double       │\n",
-       "├─────────────────┼────────────────────┤\n",
-       "│ 862a1071fffffff │   6.42137912952281 │\n",
-       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
-       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
-       "│ 862a106c7ffffff │ 0.9598425196850394 │\n",
-       "│ 862a10cc7ffffff │              0.426 │\n",
-       "│ 862a1006fffffff │ 3.1196226415094337 │\n",
-       "│ 862a10707ffffff │ 1.4344105263157898 │\n",
-       "│ 86754a937ffffff │ 0.5765625000000001 │\n",
-       "│ 862b20637ffffff │ 0.1788888888888889 │\n",
-       "│ 862a1050fffffff │  0.527027027027027 │\n",
-       "│        ·        │                ·   │\n",
-       "│        ·        │                ·   │\n",
-       "│        ·        │                ·   │\n",
-       "│ 862a35397ffffff │              11.05 │\n",
-       "│ 862aa5c8fffffff │ 0.3333333333333333 │\n",
-       "│ 862aab48fffffff │                2.0 │\n",
-       "│ 863935577ffffff │                2.0 │\n",
-       "│ 862a1212fffffff │               7.98 │\n",
-       "│ 862aadcc7ffffff │               3.24 │\n",
-       "│ 862a16a07ffffff │                2.0 │\n",
-       "│ 862aa556fffffff │                1.0 │\n",
-       "│ 862a022b7ffffff │                3.0 │\n",
-       "│ 862aac60fffffff │                2.0 │\n",
-       "├─────────────────┴────────────────────┤\n",
-       "│ 850 rows (20 shown)        2 columns │\n",
-       "└──────────────────────────────────────┘"
+       "┌─────────────────┬─────────────────────┐\n",
+       "│      hexid      │         tip         │\n",
+       "│     varchar     │       double        │\n",
+       "├─────────────────┼─────────────────────┤\n",
+       "│ 862a103b7ffffff │  2.4400652448557016 │\n",
+       "│ 862a100efffffff │  1.2719552715654947 │\n",
+       "│ 862a10777ffffff │  0.7949552868931107 │\n",
+       "│ 862a10637ffffff │  0.6767346938775509 │\n",
+       "│ 862a100afffffff │  0.8011410655084678 │\n",
+       "│ 862a10007ffffff │  0.6793565683646112 │\n",
+       "│ 863973107ffffff │ 0.35714285714285715 │\n",
+       "│ 862a10097ffffff │  1.5857277882797731 │\n",
+       "│ 862a330afffffff │ 0.25384615384615383 │\n",
+       "│ 862a1021fffffff │ 0.44750000000000006 │\n",
+       "│        ·        │                  ·  │\n",
+       "│        ·        │                  ·  │\n",
+       "│        ·        │                  ·  │\n",
+       "│ 8666e0aafffffff │                 0.5 │\n",
+       "│ 862a1152fffffff │                 2.0 │\n",
+       "│ 862b8da5fffffff │                 1.4 │\n",
+       "│ 862a112cfffffff │                6.18 │\n",
+       "│ 862a15827ffffff │                 1.5 │\n",
+       "│ 862a307b7ffffff │                1.55 │\n",
+       "│ 862a1a237ffffff │                 1.0 │\n",
+       "│ 862a11737ffffff │                4.08 │\n",
+       "│ 862a118a7ffffff │                 3.0 │\n",
+       "│ 862bb362fffffff │                2.15 │\n",
+       "├─────────────────┴─────────────────────┤\n",
+       "│ 850 rows (20 shown)         2 columns │\n",
+       "└───────────────────────────────────────┘"
       ]
      },
      "execution_count": null,
@@ -505,29 +505,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
-       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
-       "│ 862a1018fffffff │ 1.6588950276243093 │\n",
-       "│ 862a1088fffffff │  9.787446808510639 │\n",
-       "│ 862a10667ffffff │ 0.6512962962962964 │\n",
-       "│ 862a10707ffffff │ 1.4344105263157896 │\n",
-       "│ 862a1071fffffff │   6.42137912952281 │\n",
-       "│ 862a1000fffffff │ 1.2942699115044247 │\n",
-       "│ 862a15667ffffff │ 3.6666666666666665 │\n",
-       "│ 862a10187ffffff │  4.194242424242424 │\n",
+       "│ 862a103b7ffffff │ 2.4400652448557016 │\n",
+       "│ 862a100afffffff │ 0.8011410655084679 │\n",
+       "│ 862a100efffffff │  1.271955271565495 │\n",
+       "│ 862a10777ffffff │ 0.7949552868931108 │\n",
+       "│ 862a10b1fffffff │                4.0 │\n",
+       "│ 862a10ccfffffff │ 0.8404166666666666 │\n",
+       "│ 862a10097ffffff │  1.585727788279773 │\n",
+       "│ 862a1022fffffff │ 1.1291666666666667 │\n",
+       "│ 862a10007ffffff │ 0.6793565683646112 │\n",
+       "│ 862a10297ffffff │ 0.7737313432835821 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862aa1d27ffffff │                3.3 │\n",
-       "│ 862aac917ffffff │                1.8 │\n",
-       "│ 862a13027ffffff │                2.0 │\n",
-       "│ 862aa0d6fffffff │                2.0 │\n",
-       "│ 862a366c7ffffff │               3.47 │\n",
-       "│ 862a33a07ffffff │                2.0 │\n",
-       "│ 862aad8afffffff │                1.6 │\n",
-       "│ 862a13537ffffff │                1.0 │\n",
-       "│ 862a12337ffffff │                0.8 │\n",
-       "│ 862a13337ffffff │                2.0 │\n",
+       "│ 862aa0dafffffff │                2.5 │\n",
+       "│ 862ac6347ffffff │               0.76 │\n",
+       "│ 86397281fffffff │                2.0 │\n",
+       "│ 862a5421fffffff │               3.08 │\n",
+       "│ 862b1c667ffffff │               1.96 │\n",
+       "│ 862b8db6fffffff │                1.4 │\n",
+       "│ 862b8b00fffffff │                4.0 │\n",
+       "│ 862b8b057ffffff │               6.07 │\n",
+       "│ 862aa956fffffff │                1.0 │\n",
+       "│ 862a84c1fffffff │                4.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -1036,18 +1036,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         vendor_id      pickup_datetime     dropoff_datetime  passenger_count  ...  mta_tax  tip_amount  tolls_amount total_amount\n",
-       "0              VTS  2010-01-26 07:41:00  2010-01-26 07:45:00                1  ...      0.5        0.00           0.0         5.00\n",
-       "1              DDS  2010-01-30 23:31:00  2010-01-30 23:46:12                1  ...      0.5        0.00           0.0        16.30\n",
-       "2              DDS  2010-01-18 20:22:20  2010-01-18 20:38:12                1  ...      0.5        0.00           0.0        12.70\n",
-       "3              VTS  2010-01-09 01:18:00  2010-01-09 01:35:00                2  ...      0.5        0.00           0.0        14.30\n",
-       "4              CMT  2010-01-18 19:10:14  2010-01-18 19:17:07                1  ...      0.5        0.87           0.0         6.67\n",
-       "...            ...                  ...                  ...              ...  ...      ...         ...           ...          ...\n",
-       "14863773       CMT  2010-01-06 14:51:19  2010-01-06 15:02:59                2  ...      0.5        0.00           0.0         8.20\n",
-       "14863774       VTS  2010-01-09 12:52:00  2010-01-09 13:15:00                1  ...      0.5        0.00           0.0        45.50\n",
-       "14863775       CMT  2010-01-09 14:00:44  2010-01-09 14:14:33                1  ...      0.5        0.00           0.0         8.60\n",
-       "14863776       CMT  2010-01-09 09:52:23  2010-01-09 09:59:41                1  ...      0.5        0.00           0.0         7.80\n",
-       "14863777       CMT  2010-01-05 15:25:59  2010-01-05 15:33:54                1  ...      0.5        0.00           0.0         6.60\n",
+       "         vendor_id      pickup_datetime  ... tolls_amount  total_amount\n",
+       "0              VTS  2010-01-26 07:41:00  ...          0.0          5.00\n",
+       "1              DDS  2010-01-30 23:31:00  ...          0.0         16.30\n",
+       "2              DDS  2010-01-18 20:22:20  ...          0.0         12.70\n",
+       "3              VTS  2010-01-09 01:18:00  ...          0.0         14.30\n",
+       "4              CMT  2010-01-18 19:10:14  ...          0.0          6.67\n",
+       "...            ...                  ...  ...          ...           ...\n",
+       "14863773       CMT  2010-01-06 14:51:19  ...          0.0          8.20\n",
+       "14863774       VTS  2010-01-09 12:52:00  ...          0.0         45.50\n",
+       "14863775       CMT  2010-01-09 14:00:44  ...          0.0          8.60\n",
+       "14863776       CMT  2010-01-09 09:52:23  ...          0.0          7.80\n",
+       "14863777       CMT  2010-01-05 15:25:59  ...          0.0          6.60\n",
        "\n",
        "[14863778 rows x 18 columns]"
       ]
